--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "typescript": "^4.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1"
@@ -53,8 +54,7 @@
     "prettier": "^3.3.0",
     "sass": "^1.77.4",
     "stylelint": "^15.11.0",
-    "typescript-eslint": "^7.12.0",
-    "typescript": "5.1.6"
+    "typescript-eslint": "^7.12.0"
   },
   "husky": {
     "hooks": {
