--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5"
   },
