--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "classnames": "^2.5.1",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
